High/check-create-malicious-resource/.chainsaw-test/crb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb02
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo2
roleRef:
  kind: ClusterRole
  name: check-create-pods
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb03
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo3
roleRef:
  kind: ClusterRole
  name: check-create-update-deployments
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb04
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo4
roleRef:
  kind: ClusterRole
  name: check-create-update-daemonsets
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb05
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo5
roleRef:
  kind: ClusterRole
  name: check-create-update-statefulsets
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb06
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo6
roleRef:
  kind: ClusterRole
  name: check-create-update-replicationcontrollers
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb07
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo7
roleRef:
  kind: ClusterRole
  name: check-create-update-replicasets
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb08
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo8
roleRef:
  kind: ClusterRole
  name: check-create-update-cronjobs
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb09
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo9
roleRef:
  kind: ClusterRole
  name: check-create-update-jobs
  apiGroup: rbac.authorization.k8s.io
