High/check-create-malicious-resource/.chainsaw-test/rb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb02
subjects:
- kind: ServiceAccount
  name: bar2
  namespace: bar
roleRef:
  kind: Role
  name: check-create-pods
  apiGroup: rbac.authorization.k8s.io

---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb03
subjects:
- kind: ServiceAccount
  name: bar3
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-deployments
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb04
subjects:
- kind: ServiceAccount
  name: bar4
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-daemonsets
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb05
subjects:
- kind: ServiceAccount
  name: bar5
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-statefulsets
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb06
subjects:
- kind: ServiceAccount
  name: bar6
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-replicationcontrollers
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb07
subjects:
- kind: ServiceAccount
  name: bar7
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-replicasets
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb08
subjects:
- kind: ServiceAccount
  name: bar8
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-cronjobs
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  namespace: test4
  name: goodrb09
subjects:
- kind: ServiceAccount
  name: bar9
  namespace: bar
roleRef:
  kind: Role
  name: check-create-update-jobs
  apiGroup: rbac.authorization.k8s.io
